--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "mongoose": "^8.8.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.3",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
